--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Movie App Api And Design</string>
+    <string name="popular">Popular</string>
+
 </resources>
