--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,10 @@
     <string name="login">Login</string>
 
 
+    <string name="open">Open</string>
+    <string name="close">Close</string>
+
+
     //
 
 </resources>
