--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,9 @@
     <string name="account_login">Account login</string>
     <string name="login">Login</string>
     <string name="login_with_google_account">Login with Google account</string>
+    <string name="refresh">Refresh</string>
+    <string name="not_internet">Not Internet</string>
+    <string name="change_avatar">Change avatar</string>
 
 
     <string name="open">Open</string>
